src/main/java/com/example/timelist/Error/GroupDuplicateException.java
package com.example.timelist.Error;

public class GroupDuplicateException extends RuntimeException{
}
